# OpenTenant

./: .env.example  .gitignore  README.md  pyproject.toml  run.sh
frontEnd/: about.html  account.html  index.css  index.html  js.js  login.html  register.html
src/OpenTenant_app/: __init__.py  app.py  config.py  extensions.py  forms.py  models.py
src/OpenTenant_app/account/: apartment_info_form.py  forms.py  routes.py  unit_number_validation.py
src/OpenTenant_app/account/subforms/: apartment_info_form.py  emergency_contact_form.py  personal_info_form.py
src/OpenTenant_app/info/: routes.py
src/OpenTenant_app/main/: routes.py
src/OpenTenant_app/models/: user.py
src/OpenTenant_app/parsers/: __init__.py  leaseParser.py  yes_energy.py
src/OpenTenant_app/static/css/: style.css
src/OpenTenant_app/static/images/icons/: manifest.json
src/OpenTenant_app/static/js/: script.js  scroll.js  slides.js  upload.js
src/OpenTenant_app/templates/: about.html  account.html  base.html  dashboard.html  form.html  index.html  login.html  login_stylized.html  register.html  submissions.html
src/OpenTenant_app/templates/components/: _apartment_info_form.html  _emergency_info_form.html  _flash_messages.html  _form_entry.html  _lease_form.html  _personal_info_form.html
src/OpenTenant_app/templates/layout/: _footer.html  _head_metadata.html  _header.html
src/OpenTenant_app/templates/macros/: form_fields.html
src/OpenTenant_app/templates/pages/: about.html  account.html  admin.html  bug_report.html  dashboard.html  index.html  login.html  register.html  upload-lease.html
